log
Wed, Apr 16, 2025  2:45:59 PM: 
 hashmap.c | 12 +++++++++++-
 1 file changed, 11 insertions(+), 1 deletion(-)
Compilation failed
In file included from test.c:4:0:
hashmap.c: In function 'createMap':
hashmap.c:63:12: error: 'HashMap {aka struct HashMap}' has no member named 'bucket'; did you mean 'buckets'?
         map->bucket[i] = NULL ;
            ^~
eeef3b7
Wed, Apr 16, 2025  2:46:17 PM: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
83eab60
Wed, Apr 16, 2025  2:49:49 PM: 
 hashmap.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  1|5
total_score: 10/70
48d053a
Sat, Apr 19, 2025  5:04:45 PM: 
 hashmap.c | 20 ++++++++++++++++++++
 1 file changed, 20 insertions(+)
 tests:  2|5
total_score: 20/70
0f67ea1
Sat, Apr 19, 2025  5:05:22 PM: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 20/70
9d251be
Sat, Apr 19, 2025  5:09:51 PM: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|4
total_score: 30/70
82dcf0e
Sat, Apr 19, 2025  5:23:14 PM: 
 hashmap.c | 9 +++++++++
 1 file changed, 9 insertions(+)
Compilation failed
In file included from test.c:4:0:
hashmap.c: In function 'eraseMap':
hashmap.c:92:38: error: 'pos' undeclared (first use in this function)
     Pair* hashElement = map->buckets[pos] ;
                                      ^~~
hashmap.c:92:38: note: each undeclared identifier is reported only once for each function it appears in
hashmap.c:90:10: error: unused variable 'posOriginal' [-Werror=unused-variable]
     long posOriginal = posicion ;
          ^~~~~~~~~~~
cc1.exe: all warnings being treated as errors
7a77386
